# rising-you-app

./: .env.example  .env.txt  .gitignore  CLAUDE.md  README.md  admin-portaal.html  index.html  ledenbeheer.html  package-lock.json  package.json  registratie.html  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: databron.js  navigatie.js  offline.js  supabase.js
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 0001_basisschema.sql  0002_kernlogica.sql  0003_opladen.sql  0004_kassa_uitbreidingen.sql  0005_beurt_bij_toewijzing.sql  0006_admin_login.sql  0007_gezinnen.sql  0008_activiteiten_types.sql  0009_bron_sessiedagen.sql  0010_admin_portaal.sql  0011_baseline_live_functies.sql  0012_admin_login_search_path.sql  0013_kaart_layout.sql  0014_kaart_layout_afmetingen.sql  0015_statistieken.sql  0016_statistieken_slicers.sql  0017_ongedaan_maken_en_aftrekken.sql  0018_abonnement_einddatum_aanpassen.sql  0019_maak_lid.sql  0020_lid_foto.sql
